{
  "sourceLanguage" : "en",
  "strings" : {
    "" : {

    },
    "Add" : {

    },
    "Add step" : {

    },
    "Add Step" : {

    },
    "Add trip" : {

    },
    "Add Trip" : {

    },
    "Add your first step." : {

    },
    "Auto tracking is disabled as location services have been turned off for this app.  Go to iPhone settings to enable" : {

    },
    "Cancel" : {

    },
    "Coordinate: " : {

    },
    "Date" : {

    },
    "Enable automatic trip tracking" : {

    },
    "End Date" : {

    },
    "Fetching step name" : {

    },
    "hello" : {

    },
    "Journal" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Journal"
          }
        }
      }
    },
    "Location Search" : {

    },
    "Locations" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Locations"
          }
        }
      }
    },
    "Name your trip" : {

    },
    "Nearby" : {

    },
    "New step" : {

    },
    "No Steps Added Yet" : {

    },
    "Pick something from the list." : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Pick something from the list"
          }
        }
      }
    },
    "Recent Locations" : {

    },
    "Recent Searches" : {

    },
    "Samples" : {

    },
    "Save" : {

    },
    "Search for a location" : {

    },
    "Select a View" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Select a View"
          }
        }
      }
    },
    "Settings" : {

    },
    "Sidebar" : {

    },
    "Start Date" : {

    },
    "Statistics" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Statistics"
          }
        }
      }
    },
    "Steps" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Steps"
          }
        }
      }
    },
    "Taylor Swift – 1989" : {

    },
    "Title" : {

    },
    "Trip" : {

    },
    "Trip Summary" : {

    },
    "trip title" : {

    },
    "Trips" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Trips"
          }
        }
      }
    }
  },
  "version" : "1.0"
}