...
                        }
                        .frame(height: 400)
                    }
                }
                .scrollTargetLayout()
            }
            .accessibilityIdentifier("Trip Activity", isEnabled: true)
            .scrollPosition(id: $selectedStep)
            .scrollTargetBehavior(.viewAligned(limitBehavior: .alwaysByOne))
            .onChange(of: selectedStep) {
                withAnimation {
                    value.scrollTo(selectedStep, anchor: .top)
                }
...
